--- a/partner_ean_used/report/ean_report.xml
+++ b/partner_ean_used/report/ean_report.xml
@@ -5,16 +5,15 @@
         <field name="name">Partner EAN</field>
         <field name="type">ir.actions.report.xml</field>
         <field name="model">res.partner</field>
-        <field name="report_name">purchase_order_report</field>
+        <field name="report_name">partner_ean_used_report</field>
         <field name="report_type">aeroo</field>
         <field name="in_format">oo-odt</field>
         <field name="parser_loc">partner_ean_used/report/ean_parser.py</field>
-        <field name="report_rml">partner_ean_used/report/ean.odt</field>
+        <field name="report_rml">partner_ean_used/report/ean.ods</field>
         <field name="parser_state">loc</field>
         <field name="tml_source">file</field>
         <!--<field name="out_format" eval="ref('report_aeroo_ooo.report_mimetypes_pdf_odt')"></field>-->
     </record>
-
     <ir_set>
         <field eval="'action'" name="key"/>
         <field eval="'client_print_multi'" name="key2"/>
@@ -24,7 +23,6 @@
         <field eval="True" name="isobject"/>
         <field eval="True" name="replace"/>
     </ir_set>
-
 </data>
 </openerp>
 
